<resources>
    <string name="app_name">Login Signup Assignment</string>
    <string name="signup_with_email">SIGNUP WITH EMAIL</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="continueSignUp">Continue</string>
    <string name="sign_in">Sign In</string>
</resources>